// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`any 1`] = `
"/**
 * @schema MyStruct
 */
export interface MyStruct {
  /**
   * @schema MyStruct#MyAny
   */
  readonly myAny?: any;

}

/**
 * Converts an object of type 'MyStruct' to JSON representation.
 */
export function MyStruct$toJson(obj: MyStruct | undefined): Record<string, any> | undefined {
  if (obj === undefined) { return undefined; }
  const result = {
    'MyAny': obj.myAny,
  };
  // filter undefined values
  return Object.entries(result).reduce((r, i) => (i[1] === undefined) ? r : ({ ...r, [i[0]]: i[1] }), {});
}
"
`;

exports[`arrays of complex types 1`] = `
"/**
 * @schema MyStruct
 */
export interface MyStruct {
  /**
   * @schema MyStruct#Array_Of_complex
   */
  readonly arrayOfComplex?: MyType[];

}

/**
 * Converts an object of type 'MyStruct' to JSON representation.
 */
export function MyStruct$toJson(obj: MyStruct | undefined): Record<string, any> | undefined {
  if (obj === undefined) { return undefined; }
  const result = {
    'Array_Of_complex': obj.arrayOfComplex?.map(y => MyType$toJson(y)),
  };
  // filter undefined values
  return Object.entries(result).reduce((r, i) => (i[1] === undefined) ? r : ({ ...r, [i[0]]: i[1] }), {});
}

/**
 * @schema MyType
 */
export interface MyType {
  /**
   * @schema MyType#Foo
   */
  readonly foo?: number;

  /**
   * @schema MyType#Bar
   */
  readonly bar?: string;

}

/**
 * Converts an object of type 'MyType' to JSON representation.
 */
export function MyType$toJson(obj: MyType | undefined): Record<string, any> | undefined {
  if (obj === undefined) { return undefined; }
  const result = {
    'Foo': obj.foo,
    'Bar': obj.bar,
  };
  // filter undefined values
  return Object.entries(result).reduce((r, i) => (i[1] === undefined) ? r : ({ ...r, [i[0]]: i[1] }), {});
}
"
`;

exports[`arrays of primitives 1`] = `
"/**
 * @schema MyStruct
 */
export interface MyStruct {
  /**
   * @schema MyStruct#ArrayProp
   */
  readonly arrayProp?: string[];

}

/**
 * Converts an object of type 'MyStruct' to JSON representation.
 */
export function MyStruct$toJson(obj: MyStruct | undefined): Record<string, any> | undefined {
  if (obj === undefined) { return undefined; }
  const result = {
    'ArrayProp': obj.arrayProp?.map(y => y),
  };
  // filter undefined values
  return Object.entries(result).reduce((r, i) => (i[1] === undefined) ? r : ({ ...r, [i[0]]: i[1] }), {});
}
"
`;

exports[`complex types 1`] = `
"/**
 * @schema MyStruct
 */
export interface MyStruct {
  /**
   * @schema MyStruct#ComplexType
   */
  readonly complexType?: MyType;

}

/**
 * Converts an object of type 'MyStruct' to JSON representation.
 */
export function MyStruct$toJson(obj: MyStruct | undefined): Record<string, any> | undefined {
  if (obj === undefined) { return undefined; }
  const result = {
    'ComplexType': MyType$toJson(obj.complexType),
  };
  // filter undefined values
  return Object.entries(result).reduce((r, i) => (i[1] === undefined) ? r : ({ ...r, [i[0]]: i[1] }), {});
}

/**
 * @schema MyType
 */
export interface MyType {
  /**
   * @schema MyType#Foo
   */
  readonly foo?: number;

  /**
   * @schema MyType#Bar
   */
  readonly bar?: string;

  /**
   * @schema MyType#Nested
   */
  readonly nested: YourType;

}

/**
 * Converts an object of type 'MyType' to JSON representation.
 */
export function MyType$toJson(obj: MyType | undefined): Record<string, any> | undefined {
  if (obj === undefined) { return undefined; }
  const result = {
    'Foo': obj.foo,
    'Bar': obj.bar,
    'Nested': YourType$toJson(obj.nested),
  };
  // filter undefined values
  return Object.entries(result).reduce((r, i) => (i[1] === undefined) ? r : ({ ...r, [i[0]]: i[1] }), {});
}

/**
 * @schema YourType
 */
export interface YourType {
  /**
   * @schema YourType#John
   */
  readonly john?: string[];

}

/**
 * Converts an object of type 'YourType' to JSON representation.
 */
export function YourType$toJson(obj: YourType | undefined): Record<string, any> | undefined {
  if (obj === undefined) { return undefined; }
  const result = {
    'John': obj.john?.map(y => y),
  };
  // filter undefined values
  return Object.entries(result).reduce((r, i) => (i[1] === undefined) ? r : ({ ...r, [i[0]]: i[1] }), {});
}
"
`;

exports[`date 1`] = `
"/**
 * @schema MyStruct
 */
export interface MyStruct {
  /**
   * @schema MyStruct#DateTime
   */
  readonly dateTime?: Date;

}

/**
 * Converts an object of type 'MyStruct' to JSON representation.
 */
export function MyStruct$toJson(obj: MyStruct | undefined): Record<string, any> | undefined {
  if (obj === undefined) { return undefined; }
  const result = {
    'DateTime': obj.dateTime?.toISOString(),
  };
  // filter undefined values
  return Object.entries(result).reduce((r, i) => (i[1] === undefined) ? r : ({ ...r, [i[0]]: i[1] }), {});
}
"
`;

exports[`enums 1`] = `
"/**
 * @schema MyStruct
 */
export interface MyStruct {
  /**
   * @schema MyStruct#MyEnum
   */
  readonly myEnum?: MyStructMyEnum;

  /**
   * @schema MyStruct#YourEnum
   */
  readonly yourEnum?: MyStructYourEnum;

}

/**
 * Converts an object of type 'MyStruct' to JSON representation.
 */
export function MyStruct$toJson(obj: MyStruct | undefined): Record<string, any> | undefined {
  if (obj === undefined) { return undefined; }
  const result = {
    'MyEnum': obj.myEnum,
    'YourEnum': obj.yourEnum,
  };
  // filter undefined values
  return Object.entries(result).reduce((r, i) => (i[1] === undefined) ? r : ({ ...r, [i[0]]: i[1] }), {});
}

/**
 * @schema MyStructMyEnum
 */
export enum MyStructMyEnum {
  /** one */
  ONE = \\"one\\",
  /** two */
  TWO = \\"two\\",
  /** three */
  THREE = \\"three\\",
}

/**
 * @schema MyStructYourEnum
 */
export enum MyStructYourEnum {
  /** jo */
  JO = \\"jo\\",
  /** shmo */
  SHMO = \\"shmo\\",
}
"
`;

exports[`maps of complex 1`] = `
"/**
 * @schema MyStruct
 */
export interface MyStruct {
  /**
   * @schema MyStruct#ComplexMap
   */
  readonly complexMap?: { [key: string]: MyType };

}

/**
 * Converts an object of type 'MyStruct' to JSON representation.
 */
export function MyStruct$toJson(obj: MyStruct | undefined): Record<string, any> | undefined {
  if (obj === undefined) { return undefined; }
  const result = {
    'ComplexMap': ((obj.complexMap) === undefined) ? undefined : (Object.entries(obj.complexMap).reduce((r, i) => (i[1] === undefined) ? r : ({ ...r, [i[0]]: MyType$toJson(i[1]) }), {})),
  };
  // filter undefined values
  return Object.entries(result).reduce((r, i) => (i[1] === undefined) ? r : ({ ...r, [i[0]]: i[1] }), {});
}

/**
 * @schema MyType
 */
export interface MyType {
  /**
   * @schema MyType#Foo
   */
  readonly foo?: number;

  /**
   * @schema MyType#Bar
   */
  readonly bar?: string;

}

/**
 * Converts an object of type 'MyType' to JSON representation.
 */
export function MyType$toJson(obj: MyType | undefined): Record<string, any> | undefined {
  if (obj === undefined) { return undefined; }
  const result = {
    'Foo': obj.foo,
    'Bar': obj.bar,
  };
  // filter undefined values
  return Object.entries(result).reduce((r, i) => (i[1] === undefined) ? r : ({ ...r, [i[0]]: i[1] }), {});
}
"
`;

exports[`maps of primitives 1`] = `
"/**
 * @schema MyStruct
 */
export interface MyStruct {
  /**
   * @schema MyStruct#StringMap
   */
  readonly stringMap?: { [key: string]: string };

  /**
   * @schema MyStruct#NumberMap
   */
  readonly numberMap?: { [key: string]: number };

}

/**
 * Converts an object of type 'MyStruct' to JSON representation.
 */
export function MyStruct$toJson(obj: MyStruct | undefined): Record<string, any> | undefined {
  if (obj === undefined) { return undefined; }
  const result = {
    'StringMap': ((obj.stringMap) === undefined) ? undefined : (Object.entries(obj.stringMap).reduce((r, i) => (i[1] === undefined) ? r : ({ ...r, [i[0]]: i[1] }), {})),
    'NumberMap': ((obj.numberMap) === undefined) ? undefined : (Object.entries(obj.numberMap).reduce((r, i) => (i[1] === undefined) ? r : ({ ...r, [i[0]]: i[1] }), {})),
  };
  // filter undefined values
  return Object.entries(result).reduce((r, i) => (i[1] === undefined) ? r : ({ ...r, [i[0]]: i[1] }), {});
}
"
`;

exports[`names can get crazy 1`] = `
"/**
 * @schema MyStruct
 */
export interface MyStruct {
  /**
   * @schema MyStruct#hyphen-name
   */
  readonly hyphenName?: string;

  /**
   * @schema MyStruct#$nameWithDolar
   */
  readonly nameWithDolar?: string;

  /**
   * @schema MyStruct#name with spaces
   */
  readonly nameWithSpaces?: string;

}

/**
 * Converts an object of type 'MyStruct' to JSON representation.
 */
export function MyStruct$toJson(obj: MyStruct | undefined): Record<string, any> | undefined {
  if (obj === undefined) { return undefined; }
  const result = {
    'hyphen-name': obj.hyphenName,
    '$nameWithDolar': obj.nameWithDolar,
    'name with spaces': obj.nameWithSpaces,
  };
  // filter undefined values
  return Object.entries(result).reduce((r, i) => (i[1] === undefined) ? r : ({ ...r, [i[0]]: i[1] }), {});
}
"
`;

exports[`primitives 1`] = `
"/**
 * @schema MyStruct
 */
export interface MyStruct {
  /**
   * @schema MyStruct#StringProperty
   */
  readonly stringProperty: string;

  /**
   * @schema MyStruct#BooleanProperty
   */
  readonly booleanProperty?: boolean;

  /**
   * @schema MyStruct#NumberProperty
   */
  readonly numberProperty?: number;

  /**
   * @schema MyStruct#With_UnderScore
   */
  readonly withUnderScore?: number;

}

/**
 * Converts an object of type 'MyStruct' to JSON representation.
 */
export function MyStruct$toJson(obj: MyStruct | undefined): Record<string, any> | undefined {
  if (obj === undefined) { return undefined; }
  const result = {
    'StringProperty': obj.stringProperty,
    'BooleanProperty': obj.booleanProperty,
    'NumberProperty': obj.numberProperty,
    'With_UnderScore': obj.withUnderScore,
  };
  // filter undefined values
  return Object.entries(result).reduce((r, i) => (i[1] === undefined) ? r : ({ ...r, [i[0]]: i[1] }), {});
}
"
`;
